# winecrawler

./: .gitignore  README.md  crawler.py  extractor.py  pyproject.toml  server.py
classification/: AccWeightedEnsemble.py  classifier.py  feature_extractors.py  generic_classifier.py  learn_classifier.py  mlp.py
classification/helpers/: corpus.py  corpus_loader.py  document.py  tokenize.py  utils.py
classification/results/: classifier  classify_crawler_samples  decision_tree.csv  logistic_regression.csv  multilayer_perceptron.csv  naive_bayes.csv  svm.csv  vocabulary_with_stop_words.csv  vocabulary_without_stop_words.csv  words_extractor
classification/sample_pages/: sample_urls.txt
classification/samples/: nonsample_urls  sample_downloader.py  sample_output.txt
crawler/: crawler.py
extractor/: adegamais_extractor.py  divinho_extractor.py  divvino_extractor.py  evino_extractor.py  extractor.py  global_extractor.py  global_extractor_v2.py  grandcru_extractor.py  mistral_extractor.py  save_page_corpus.py  superadega_extractor.py  viavini_extractor.py  vinhofacil_extractor.py  vivavinho_extractor.py  wine_extractor.py
extractor/classifier_results/: models_result.py
extractor/pages/: 10.html  1030.html  1039.html  1043.html  1052.html  1071.html  1076.html  1081.html  1095.html  11.html  1100.html  1105.html  1109.html  1117.html  1122.html  1133.html  1138.html  (+1739 more)
pre_processing/: correlation_results.csv  index.py  inverted_index.json  inverted_index_with_compression_pairs.json  inverted_index_without_compression_pairs.json  processor.py
server/: server.py
(+19353 files in other folders)
