[tool.poetry]
name = "winecrawler"
version = "0.1.0"
description = "Projeto da cadeira IF692 - Recuperação de Informação (2021.1)"
authors = ["Tiago Moraes <tiago3902@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
