[tool.poetry]
name = "winecrawler"
version = "0.1.0"
description = "Projeto da cadeira IF692 - Recuperação de Informação (2021.1)"
authors = ["Tiago Moraes <tiago3902@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
