[tool.poetry]
name = "winecrawler"
version = "0.1.0"
description = "Projeto da cadeira IF692 - Recuperação de Informação (2021.1)"
authors = ["Tiago Moraes <tiago3902@gmail.com>", "Edjan Michiles <esvm@cin.ufpe.br>", "Matheus Borba <mlbas@cin.ufpe.br>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
tabulate = "^0.8.9"
reppy = "^0.4.14"
nltk = "^3.6.5"
numpy = "^1.21.4"
scikit-learn = "^1.0.1"
pandas = "^1.3.4"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
